// Copyright 2019 gRPC authors.

syntax = "proto3";

package grpc.testing;

import "grpc/testing/package_options_import.proto";
import "grpc/testing/package_options_import2.proto";

option ruby_package = "RPC::Test::New::Package::Options";

message AnotherTestRequest { }

message AnotherTestResponse { }

message Foo { }

message Bar {
  message Baz { }
}

service AnotherTestService {
  rpc GetTest(AnotherTestRequest) returns (AnotherTestResponse) { }
  rpc OtherTest(Thing) returns (Thing) { }
  rpc PackageTest(grpc.testing.Thing) returns (grpc.foo.Foo.Bar) { }
  rpc FooTest(Foo) returns (Foo) { }
  rpc NestedMessageTest(Foo) returns (Bar.Baz) { }
}
